--- a/Day8/soln_day8.ipynb
+++ b/Day8/soln_day8.ipynb
@@ -98,29 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name?ki\n",
+      "Name?kira\n",
       "tech allowance?22\n",
-      "Name?jj\n",
+      "Name?pp\n",
       "grade?a\n",
-      "department?cs\n",
-      "\n",
-      "\n"
+      "department?cse\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Officer jj with id 114 has a salary of 30000\\n'"
+       "'Officer pp with id 116 has a salary of 30000\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +156,8 @@
     "s1=scientist()\n",
     "s2=officer()\n",
     "str(s1)\n",
-    "str(s2)\n"
+    "str(s2)\n",
+    "\n"
    ]
   },
   {
