--- a/Day9/soln_day9.ipynb
+++ b/Day9/soln_day9.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,10 @@
     }
    ],
    "source": [
+    "import abc\n",
+    "\n",
     "class vehicle:\n",
+    "    __metaclass__ = abc.ABCMeta\n",
     "    no = 100\n",
     "    def __init__(self):\n",
     "        vehicle.no += 1\n",
@@ -176,8 +179,12 @@
     "        self.vno = vehicle.no\n",
     "        self.vym = input(\"yearofmake?\")\n",
     "        self.vbp = input(\"buyingprice in tousands?\") * 1000\n",
-    "        self.vpv = self.vbp \n",
+    "        self.vpv = self.vbp\n",
     "        \n",
+    "#    @abc.abstractmethod\n",
+    "    def cal_pv(self):\n",
+    "        pass\n",
+    "    \n",
     "    def display(self):\n",
     "        print \" --- info ---\\nType: %s, Vno : %s, owner : %s,\\nNoofwheels : %s, yearofmake : %d, \\nprice : %d, presentVal : %d \"%(self.type,self.vno,self.vowner,self.vwheels,self.vym,self.vbp,self.vpv)\n",
     "\n",
