--- a/Day9/soln_day9.ipynb
+++ b/Day9/soln_day9.ipynb
@@ -150,23 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "owner?nandu\n",
-      "yearofmake?2018\n",
-      "buyingprice in tousands?2\n",
-      " --- info ---\n",
-      "Type: truck, Vno : 101, owner : nandu,\n",
-      "Noofwheels : 10, yearofmake : 2018, \n",
-      "price : 2000, presentVal : 2000 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import abc\n",
     "\n",
@@ -181,7 +167,7 @@
     "        self.vbp = input(\"buyingprice in tousands?\") * 1000\n",
     "        self.vpv = self.vbp\n",
     "        \n",
-    "#    @abc.abstractmethod\n",
+    "    @abc.abstractmethod\n",
     "    def cal_pv(self):\n",
     "        pass\n",
     "    \n",
@@ -213,7 +199,7 @@
     "        self.vpv = self.vbp - (2018 - self.vym) * 12000\n",
     "        \n",
     "        \n",
-    "v1 = truck()\n",
+    "v1 = vehicle()\n",
     "v1.cal_pv()\n",
     "v1.display()\n",
     "        "
