--- a/ML/assignments/Day4.ipynb
+++ b/ML/assignments/Day4.ipynb
@@ -120,8 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Try clustering with some suitable datasets in the link\n",
-    "http://cs.joensuu.fi/sipu/datasets/"
+    "### 3. Try clustering with some suitable datasets \n"
    ]
   },
   {
