--- a/Day13/soln_day13.ipynb
+++ b/Day13/soln_day13.ipynb
@@ -68,20 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hai\n"
+     ]
+    }
+   ],
    "source": [
-    "import xml.dom.minidom as dm\n",
+    "import MySQLdb as db\n",
     "\n",
-    "doc = dm.Document()\n",
-    "emp = doc.createElement('employee')\n",
-    "emp.appendChild(doc.createTextNode(\"hai\"))\n",
+    "f = open(\"emp.csv\")\n",
     "\n",
-    "doc.appendChild(emp)\n",
+    "content = f.readlines()\n",
     "\n",
-    "fd = open('employee.xml','w')\n",
-    "doc.writexml(fd)"
+    "try:\n",
+    "    connection = db.connect('127.0.0.1','ai','ai','ai')\n",
+    "    cursor = connection.cursor()\n",
+    "    for c in content[1:]:\n",
+    "        datas = c.strip().split(',')\n",
+    "        q = 'INSERT INTO emp_ai16 VALUES(%d,\\'%s\\',\\'%s\\',%d);'%(int(datas[0]),datas[1],datas[2],int(datas[3]))\n",
+    "        cursor.execute(q)\n",
+    "        #print q\n",
+    "except Exception,arg:\n",
+    "    print arg\n",
+    "else:\n",
+    "    print \"hai\"\n",
+    "\n",
+    "        "
    ]
   },
   {
