--- a/Day15/soln_day15.ipynb
+++ b/Day15/soln_day15.ipynb
@@ -25,10 +25,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def IsInteger(s):\n",
+    "    return not not re.match(r'.*\\d.*',s)\n",
+    "\n",
+    "def IsFloat(s):\n",
+    "    return not not re.match(r'.*(\\d+.\\d+).*',s)\n",
+    "\n",
+    "def HasVowel(s):\n",
+    "    return not not re.match(r'.*[a,e,i,o,u].*',s,re.I)\n",
+    "\n",
+    "def IsHex(s):\n",
+    "    return not re.match(r'[^0-9,a-f]',s,re.I)\n",
+    "\n",
+    "def IsDate(s):\n",
+    "    return not not re.match(r'\\d\\d-\\d\\d-\\d\\d\\d\\d',s)\n",
+    "\n",
+    "def IsValidPassword(s):\n",
+    "    return not not re.match(r'(?=.*[A-Z].*[A-Z].*)(?=.*[a-z].*[a-z].*)(?=.*\\d.*\\d.*)\\w{8,16}',s)\n",
+    "\n",
+    "## 8 to 16 alphanumerics - \\w(8,16) , at least 2 digits - (?=.*\\d.*\\d.*), at least 2 lowercase letters (?= .*[a-z].*[a-z].*)\n",
+    "## atleast 2 uppercase letters (?= .*[A-Z].*[A-Z].*)\n",
+    "\n",
+    "def IsValidEmail(s):\n",
+    "    return not not re.match(r'\\w+@\\w+.\\w+',s,re.I)\n",
+    "    \n",
+    "IsValidEmail(\"2aa8AaMsd@1.v\")    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  8.Normalise -  to replace all instances of one or more whitespace characters with a single space."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def normalise(s):\n",
+    "    return re.sub('')"
+   ]
   }
  ],
  "metadata": {
