--- a/ML/assignments/Day9.ipynb
+++ b/ML/assignments/Day9.ipynb
@@ -268,6 +268,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GridsearchCV\n",
+    "### 1) Write a program to get the optimum value of k for a KNN problem using\n",
+    "GridSearchC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
