--- a/Day20/soln_day20.ipynb
+++ b/Day20/soln_day20.ipynb
@@ -19,60 +19,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "d = 'S20,i8'\n",
-    "\n",
-    "data = np.array([('hai',23),('gai',22)],dtype=d)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([('hai', 23), ('gai', 22)],\n",
-       "      dtype=[('f0', 'S20'), ('f1', '<i8')])"
+       "array([('K.Raj', 101, 'scientist',  50000., '(0493)-2287278'),\n",
+       "       ('Mohan Raj M.', 102, 'engineer',  50000., '[0496]-2287278'),\n",
+       "       ('M.Ram', 104, 'scientist',  80000., '(0491)-4287275'),\n",
+       "       ('Ram Kumar', 104, 'scientist',  60000., '(0491)-4287335'),\n",
+       "       ('Mohan Babu K.K.', 106, 'officer',  50000., '{0496}-2387278'),\n",
+       "       ('K.Gopal', 107, 'scientist',  50000., '(0493)-2287278'),\n",
+       "       ('Anil Raj M.', 108, 'engineer',  50000., '{0496]-2287278'),\n",
+       "       ('Amala P.', 201, 'scientist',  70000., '(0498)-9287275'),\n",
+       "       ('Uma ', 204, 'officer',  60000., '(0491)-4287335'),\n",
+       "       ('Suma', 206, 'engineer',  50000., '0496_2387278')],\n",
+       "      dtype=[('ename', 'S20'), ('eno', '<i8'), ('edesign', 'S20'), ('esal', '<f8'), ('ephone', 'S20')])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "datype = np.dtype({'names': ['ename','eno','edesign','esal','ephone'],'formats':['S20','i8','S20','f8','S20']})\n",
+    "\n",
+    "atf = np.loadtxt('emp.csv',delimiter=',',dtype=datype)\n",
+    "atf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('ename', 'eno', 'edesig', 'esalary', 'ephno\\n'), ('K.Raj', '101', 'scientist', '50000.00', '(0493)-2287278\\n'), ('Mohan Raj M.', '102', 'engineer', '50000.00', '[0496]-2287278\\n'), ('M.Ram', '104', 'scientist', '80000.00', '(0491)-4287275\\n'), ('Ram Kumar', '104', 'scientist', '60000.00', '(0491)-4287335\\n'), ('Mohan Babu K.K.', '106', 'officer', '50000.00', '{0496}-2387278\\n'), ('K.Gopal', '107', 'scientist', '50000.00', '(0493)-2287278\\n'), ('Anil Raj M.', '108', 'engineer', '50000.00', '{0496]-2287278\\n'), ('Amala P.', '201', 'scientist', '70000.00', '(0498)-9287275\\n'), ('Uma ', '204', 'officer', '60000.00', '(0491)-4287335\\n'), ('Suma', '206', 'engineer', '50000.00', '0496_2387278\\n')]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([['Mohan Raj M.', 102, 'engineer', 50000.0, '[0496]-2287278'],\n",
+       "       ['M.Ram', 104, 'scientist', 80000.0, '(0491)-4287275'],\n",
+       "       ['Ram Kumar', 104, 'scientist', 60000.0, '(0491)-4287335'],\n",
+       "       ['Mohan Babu K.K.', 106, 'officer', 50000.0, '{0496}-2387278'],\n",
+       "       ['K.Gopal', 107, 'scientist', 50000.0, '(0493)-2287278'],\n",
+       "       ['Anil Raj M.', 108, 'engineer', 50000.0, '{0496]-2287278'],\n",
+       "       ['Amala P.', 201, 'scientist', 70000.0, '(0498)-9287275'],\n",
+       "       ['Uma ', 204, 'officer', 60000.0, '(0491)-4287335'],\n",
+       "       ['Suma', 206, 'engineer', 50000.0, '0496_2387278']], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fd = open('emp.csv')\n",
-    "lines = fd.readlines()\n",
-    "fd.close()\n",
+    "import pandas as pd\n",
     "\n",
-    "cc =[]\n",
-    "for line in lines:\n",
-    "    cc.append(tuple(line.split(',')))\n",
-    "print cc              "
+    "dd = pd.read_csv('emp.csv')\n",
+    "temp = dd.as_matrix()\n",
+    "\n",
+    "temp"
    ]
   },
   {
