--- a/Day20/soln_day20.ipynb
+++ b/Day20/soln_day20.ipynb
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "datype = np.dtype({'names': ['ename','eno','edesign','esal','ephone'],'formats':['S20','i8','S20','f8','S20']})\n",
     "\n",
-    "atf = np.loadtxt('emp.csv',delimiter=',',dtype=datype)\n"
+    "atf = np.loadtxt('emp.csv',delimiter=',',skiprows=1,dtype=datype)\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +55,9 @@
      "output_type": "stream",
      "text": [
       "<type 'numpy.ndarray'>\n",
-      "(9, 5)\n",
-      "[['Mohan Raj M.' 102 'engineer' 50000.0 '[0496]-2287278']\n",
+      "(10, 5)\n",
+      "[['K.Raj' 101 'scientist' 50000.0 '(0493)-2287278']\n",
+      " ['Mohan Raj M.' 102 'engineer' 50000.0 '[0496]-2287278']\n",
       " ['M.Ram' 104 'scientist' 80000.0 '(0491)-4287275']\n",
       " ['Ram Kumar' 104 'scientist' 60000.0 '(0491)-4287335']\n",
       " ['Mohan Babu K.K.' 106 'officer' 50000.0 '{0496}-2387278']\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,7 @@
        "      dtype='|S20')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        "      dtype=[('ename', 'S20'), ('eno', '<i8'), ('edesign', 'S20'), ('esal', '<f8'), ('ephone', 'S20')])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
        "570000.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
        "50000.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
        "[4, 3, 2, 1]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +259,7 @@
        "50000.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
