--- a/ML/assignments/Day12.ipynb
+++ b/ML/assignments/Day12.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "(667, 1000)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,69 @@
    "metadata": {},
    "source": [
     "### 6) Write a program to an object detection (any object ) , by identifying suitable\n",
-    "haarClassifier xml file developed by some third party."
+    "haarClassifier xml file developed by some third party.\n",
+    "\n",
+    "* Wall clock http://alereimondo.no-ip.org/OpenCV/34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wallc_c = cv.CascadeClassifier('classifier_WallClock.xml') \n",
+    "\n",
+    "img_f = cv.imread('wc1.jpg')\n",
+    "\n",
+    "### manipulations are done on gray scale\n",
+    "img_f_g = cv.cvtColor(img_f,cv.COLOR_BGR2GRAY)\n",
+    "clocks = wallc_c.detectMultiScale(img_f_g,1.3)\n",
+    "\n",
+    "for (x,y,w,h) in clocks:\n",
+    "    cv.rectangle(img_f,(x,y),(x+w,y+h),(0,255,0),2)\n",
+    "\n",
+    "cv.imshow('faced',img_f)\n",
+    "cv.waitKey(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7) Apply edge detection algorithm canny on the messi.jpg image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_me = cv.imread('messi.jpg')\n",
+    "img_me.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges = cv.Canny(img_me,100,200)\n",
+    "cv.imshow('ed',edges)\n",
+    "cv.waitKey(0)"
    ]
   },
   {
