--- a/Day24/soln_day24.ipynb
+++ b/Day24/soln_day24.ipynb
@@ -552,11 +552,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# ls -l > lsf1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -570,7 +571,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
