--- a/Day24/soln_day24.ipynb
+++ b/Day24/soln_day24.ipynb
@@ -1027,11 +1027,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data.to_csv(path_or_buf='~/lsf5') to create fi"
+    "# data.to_csv(path_or_buf='~/lsf5') ### to create file at home dir\n",
+    "data.to_csv('lsf5')"
    ]
   },
   {
