--- a/Day24/soln_day24.ipynb
+++ b/Day24/soln_day24.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,23 +427,17 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'item': ['banana', 'orange', 'mango', 'grape'],\n",
-       " 'place': ['nielit', 'kattangal', 'KA', 'TN'],\n",
-       " 'tot_s': [4, 2, 5, 10]}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = { 'item' : ['banana','orange','mango','grape'], 'place' : ['nielit','kattangal','KA','TN'] ,'tot_s' : [4,2,5,10]}\n",
-    "data"
+    "import random\n",
+    "\n",
+    "item  = ['banana','orange','mango','grape']*5\n",
+    "place = ['nielit']*4+['kattangal']*4+['KA']*4+['TN']*4+['UP']*4\n",
+    "#random.shuffle(item)\n",
+    "#random.shuffle(place)\n",
+    "total = random.sample(range(20, 100), 20)\n",
+    "\n",
+    "data = { 'item' : item, 'place' : place ,'tot_s' : total}\n"
    ]
   },
   {
@@ -482,36 +476,148 @@
        "      <th>0</th>\n",
        "      <td>banana</td>\n",
        "      <td>nielit</td>\n",
-       "      <td>4</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>orange</td>\n",
-       "      <td>kattangal</td>\n",
-       "      <td>2</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>mango</td>\n",
-       "      <td>KA</td>\n",
-       "      <td>5</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>grape</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>banana</td>\n",
        "      <td>TN</td>\n",
-       "      <td>10</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     item      place  tot_s\n",
-       "0  banana     nielit      4\n",
-       "1  orange  kattangal      2\n",
-       "2   mango         KA      5\n",
-       "3   grape         TN     10"
+       "      item      place  tot_s\n",
+       "0   banana     nielit     90\n",
+       "1   orange     nielit     81\n",
+       "2    mango     nielit     89\n",
+       "3    grape     nielit     24\n",
+       "4   banana  kattangal     65\n",
+       "5   orange  kattangal     57\n",
+       "6    mango  kattangal     29\n",
+       "7    grape  kattangal     43\n",
+       "8   banana         KA     53\n",
+       "9   orange         KA     70\n",
+       "10   mango         KA     76\n",
+       "11   grape         KA     44\n",
+       "12  banana         TN     60\n",
+       "13  orange         TN     88\n",
+       "14   mango         TN     84\n",
+       "15   grape         TN     73\n",
+       "16  banana         UP     50\n",
+       "17  orange         UP     97\n",
+       "18   mango         UP     28\n",
+       "19   grape         UP     45"
       ]
      },
      "execution_count": 46,
@@ -526,22 +632,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item</th>\n",
+       "      <th>place</th>\n",
+       "      <th>tot_s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>UP</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>orange</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>banana</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>kattangal</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>grape</td>\n",
+       "      <td>KA</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>mango</td>\n",
+       "      <td>nielit</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "pandas.core.series.Series"
+       "      item      place  tot_s\n",
+       "0   banana         UP     50\n",
+       "1   orange         UP     97\n",
+       "2    grape         TN     73\n",
+       "3   orange     nielit     81\n",
+       "4    grape         UP     45\n",
+       "5    grape     nielit     24\n",
+       "6   orange  kattangal     57\n",
+       "7   orange         KA     70\n",
+       "8   banana  kattangal     65\n",
+       "9    grape  kattangal     43\n",
+       "10  banana     nielit     90\n",
+       "11  banana         KA     53\n",
+       "12   mango         TN     84\n",
+       "13   mango         UP     28\n",
+       "14   mango         KA     76\n",
+       "15  orange         TN     88\n",
+       "16  banana         TN     60\n",
+       "17   mango  kattangal     29\n",
+       "18   grape         KA     44\n",
+       "19   mango     nielit     89"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(ddf['item'])"
+    "index = [i for i in range(ddf.shape[0])]\n",
+    "random.shuffle(index)\n",
+    "s_ddf =  ddf.set_index([index]).sort_index()\n",
+    "s_ddf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      True\n",
+       "1     False\n",
+       "2     False\n",
+       "3     False\n",
+       "4      True\n",
+       "5     False\n",
+       "6     False\n",
+       "7     False\n",
+       "8     False\n",
+       "9     False\n",
+       "10    False\n",
+       "11    False\n",
+       "12    False\n",
+       "13    False\n",
+       "14    False\n",
+       "15    False\n",
+       "16     True\n",
+       "17    False\n",
+       "18     True\n",
+       "19     True\n",
+       "Name: item, dtype: bool"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = ddf['item']=='banana'\n",
+    "t"
    ]
   },
   {
